# DroneBinome

./: arbre.txt  start_drone.sh
install/: local_setup.sh  setup.sh
install/drone_binome/lib/drone_binome/: drone_node
install/drone_binome/share/ament_index/resource_index/package_run_dependencies/: drone_binome
install/drone_binome/share/ament_index/resource_index/parent_prefix_path/: drone_binome
install/drone_binome/share/drone_binome/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/drone_binome/share/drone_binome/cmake/: drone_binomeConfig-version.cmake  drone_binomeConfig.cmake
install/drone_binome/share/drone_binome/environment/: ament_prefix_path.dsv  path.dsv
install/drone_binome/share/drone_binome/models/model_drone/meshes/: hull.dae
install/drone_binome/share/drone_binome/models/parrot_bebop_2/: model.config  model.sdf
install/drone_binome/share/drone_binome/models/parrot_bebop_2/meshes/: hull.dae  propeller_fl.dae  propeller_fr.dae  propeller_rl.dae  propeller_rr.dae
install/drone_binome/share/drone_binome/worlds/: monde_binome.sdf
log/: latest_build
src/drone_binome/: CMakeLists.txt  package.xml
src/drone_binome/src/: drone_main.cpp  drone_ui.ui
src/drone_binome/worlds/: monde_binome.sdf
