<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>drone_binome</name>
  <version>0.0.0</version>
  <description>Interface de contrôle Drone Binôme</description>
  <maintainer email="rabe@todo.todo">rabe</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>qtbase5-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
